--- a/src/index.css
+++ b/src/index.css
@@ -95,11 +95,18 @@
     -webkit-appearance: none;
   }
 
-  #root::before {
+  #root {
+    overflow: hidden;
+    min-height: 100vh;
+    scroll-margin: 15px;
+  }
+
+  #root::after {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
+    z-index: -1;
     height: 100%;
     min-height: 100vh;
     width: 100%;
